login page complete design

--- a/src/app/login-register/login-page/login-page.component.html
+++ b/src/app/login-register/login-page/login-page.component.html
@@ -1,3 +1,24 @@
+<div class="container-fluid loginpage">
+<div class="row">
+    <div class="col-12 col-md-6 col-sm-6 col-lg-6 welcomescreen"> 
+        <img src="../../../assets/images/erp-logo.png" class="erplogo" alt="erplogo">
+<h3>Welcome</h3>
+<h5>Request for an ERP account here</h5>
+<h6>Request for an free ERP account to view the product and playaround with the application(Access will be limited for free account)</h6>
+<button type="button" class="registerbutton">Register Now</button>
 <p>
-  login-page works!
+    <span>Helpcenter</span>
+    <span>Pricing</span>
+    <span>Policies</span>
 </p>
+    </div>
+    <div class="col-12 col-md-6 col-sm-6 col-lg-6 loginform">
+<h3>Or login to your account</h3>
+<input class="txtclass" type="text" name="firstname" placeholder="Your email">
+<input class="txtclass" type="password" name="firstname" placeholder="Your password">
+<div class="signindiv">
+    <button class="signinbtn" type="button">Sign in</button>
+    <p>Forgot Password?</p>
+</div>
+</div>
+</div>
