new changes for component switch

--- a/src/app/login-register/forgotpwd-page/forgotpwd-page.component.html
+++ b/src/app/login-register/forgotpwd-page/forgotpwd-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  forgotpwd-page works!
-</p>
+<h3>Enter emailid to reset</h3>
+<input class="txtclass" type="text" name="firstname" placeholder="Your email">
+<div class="signindiv">
+    <button class="signinbtn" type="button">Sign in</button>
+</div>
